# Gyaru-Rhythm-Battle

./: .gitignore  CMakeLists.txt  README.md
assets/audio/: README.md
assets/charts/: intro_battle.chart
docs/: assets.md  concept.md  implementation_plan.md  mvc.md  scope.md
src/: main.cpp
src/app/: Application.cpp  Application.h
src/controller/: GameController.cpp  GameController.h
src/interfaces/: IController.h  IModel.h  IView.h
src/model/: DialogueScene.cpp  DialogueScene.h  GameModel.cpp  GameModel.h  GameState.cpp  GameState.h  RhythmBattle.cpp  RhythmBattle.h  SongChart.cpp  SongChart.h
src/view/: DialogueView.cpp  DialogueView.h  MenuView.cpp  MenuView.h  ResultView.cpp  ResultView.h  RhythmView.cpp  RhythmView.h  TextureUtils.cpp  TextureUtils.h
tests/: model_tests.cpp
